output.txt


							   PHASE 1: INTERMEDIATE CODE GENERATION 

a = NULL
x = 1
y = 2
z = 3
k = 9
t0 = z + k
t1 = y + t0
x = t1
y = 10
z = 5


								 PHASE 2: CODE OUTPUT PHASE 

input.c:12:8: error: expected ';' after expression
    z=5
       ^
       ;
1 error generated.

--- Program Output ---
Hello!Hello!Hello!Hello!Hello!Hello!Hello!Hello!Hello!Hello!Hello World!HiHello World!HiHello World!HiHello World!HiHello World!HiHello World!HiHello World!HiHello World!HiHello World!HiHello World!Hi